@@ -1,25 +1,18 @@
 package factorymethod.factory;
 
-import factorymethod.model.Operador;
+import java.lang.reflect.InvocationTargetException;
 
+import factorymethod.model.Operador;
 public class Factory {
     
     public static Operador factory(String tipo){
         
-        Object classeInstanciada = null;
-        
         try {
-            classeInstanciada = Class.forName("factorymethod.model."+tipo).newInstance();
-
-        } catch (InstantiationException e) {
-            e.printStackTrace();
-        } catch (IllegalAccessException e) {
-            e.printStackTrace();
-        } catch (ClassNotFoundException e) {
-            e.printStackTrace();
-        }
-        
-        return (Operador) classeInstanciada;
-
+            Object classeInstanciada = Class.forName("factorymethod.model."+tipo).getDeclaredConstructor().newInstance();
+            return (Operador) classeInstanciada;
+        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException | NoSuchMethodException | InvocationTargetException e) {
+            System.out.println("Operação inválida!");
+            return null;
+        }         
     }
 }
